--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
       <tbody>
         <script>
           // list of courses and their faculty ratings
-          const courses = [
-            { name: "Mathematics", faculty: ["John", "Jane", "Bob"], ratings: [8, 9, 7] },
-            { name: "English", faculty: ["Alice", "Bob", "Charlie"], ratings: [9, 7, 8] },
-            { name: "Science", faculty: ["John", "Alice", "Charlie"], ratings: [7, 8, 9] },
-            { name: "History", faculty: ["Bob", "Jane", "Charlie"], ratings: [8, 9, 7] },
-            { name: "Geography", faculty: ["John", "Jane", "Alice"], ratings: [7, 8, 9] },
-          ];
+         const courses = [
+  {
+    name: "Mathematics",
+    faculty: [
+      { name: "John", ratings: 8, availability: [true, false, true, true, false] },
+      { name: "Jane", ratings: 9, availability: [true, true, true, false, true] },
+      { name: "Bob", ratings: 7, availability: [true, true, false, true, false] },
+    ],
+  },
+  // ...
+];
+
       // generate time table for a week from Monday to Friday
       const daysOfWeek = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
 
@@ -59,7 +64,7 @@
               for (let j = i + 1; j < numFaculty; j++) {
                 const facultyPair = [courseFaculty[i], courseFaculty[j]];
                 // check if both faculty are available on current day
-                const facultyAvailable = true; // replace with actual availability check
+                const facultyAvailable = facultyPair.every((faculty) => faculty.availability[daysOfWeek.indexOf(day)]);
                 if (facultyAvailable) {
                   // add faculty pair to time table
                   timeTable[day].push({ course: course.name, faculty: facultyPair });
@@ -81,7 +86,14 @@ for (const day in timeTable) {
   timeTable[day].forEach((entry, index) => {
     const endHour = startHour + Math.floor((startMinute + 50) / 60);
     const endMinute = (startMinute + 50) % 60;
-    document.write(`<tr><td>${day}</td><td>${startHour}:${startMinute.toString().padStart(2, '0')} AM - ${endHour}:${endMinute.toString().padStart(2, '0')} AM</td><td>${entry.course}</td><td>${entry.faculty.join(', ')}</td></tr>`);
+    // print course and faculty pair
+    document.write(`<tr><td rowspan="${entry.faculty.length + 1}">${day}</td><td rowspan="${entry.faculty.length + 1}">${startHour}:${startMinute
+      .toString()
+      .padStart(2, "0")} AM - ${endHour}:${endMinute.toString().padStart(2, "0")} AM</td><td rowspan="${entry.faculty.length + 1}">${entry.course}</td></tr>`);
+    // print each faculty member and their availability
+    entry.faculty.forEach((faculty) => {
+      document.write(`<tr><td>${faculty.name}</td><td>${faculty.availability[daysOfWeek.indexOf(day)] ? "Available" : "Not available"}</td></tr>`);
+    });
     startMinute = endMinute + 5; // add 5-minute break
     if (startMinute >= 60) {
       startHour += 1;
@@ -89,6 +101,7 @@ for (const day in timeTable) {
     }
   });
 }
+
 
     </script>
   </tbody>
