--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     name: "Mathematics",
     faculty: [
       { name: "John", ratings: 8, availability: [true, false, true, true, false] },
-      { name: "Jane", ratings: 9, availability: [true, true, true, false, true] },
+      //{ name: "Jane", ratings: 9, availability: [true, true, true, false, true] },
+      { name: "Jane", ratings: 9, availability: [true, true, true, false, false] },
       { name: "Bob", ratings: 7, availability: [true, true, false, true, false] },
     ],
   },
